<resources>
    <string name="app_name">LeftoverSaverApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="profile">Profile</string>
    <string name="additem">Item Details</string>
    <string name="itemname">Name</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="item">Items</string>
    <string name="left">Left</string>
    <string name="order">Make an order</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="restaurant">Pick your restaurant</string>
    <string name="confirm">Confirm</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="deliver">Deliver?</string>
    <string name="ok">OK</string>
    <string name="needy_name">Needy Name: </string>
    <string name="needy_phone">Needy Phone: </string>
    <string name="donor_email">Donor Email: </string>
    <string name="donor_name">Donor Name: </string>
    <string name="items_list">Items List: </string>
    <string name="search">Search</string>
    <string-array name="usertype">
        <item>Needy</item>
        <item>Volunteer</item>
        <item>Donor</item>
    </string-array>

    <string-array name="filter">
        <item>All</item>
        <item>Al-ola</item>
        <item>Medina</item>
        <item>Mecca</item>
        <item>Riyadh</item>
        <item>Jeddah</item>
        <item>Tabuk</item>
    </string-array>

    <string-array name="city">
        <item>Al-ola</item>
        <item>Medina</item>
        <item>Mecca</item>
        <item>Riyadh</item>
        <item>Jeddah</item>
        <item>Tabuk</item>
    </string-array>

</resources>
