<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff">

    <View
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/design_default_color_on_secondary"
        android:gravity="center"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver"
        android:fontFamily="@font/comfortaa"
        android:id="@+id/text_dialog"
        android:layout_below="@+id/a"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:text="@string/needy_name"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/comfortaa"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="44dp"
        android:gravity="center_horizontal"
        android:text="@string/needy_phone"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/comfortaa"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="74dp"
        android:gravity="center_horizontal"
        android:text="@string/donor_name"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="104dp"
        android:gravity="center_horizontal"
        android:text="@string/items_list"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa"
        android:layout_toEndOf="@+id/name"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/a"
        android:fontFamily="@font/comfortaa"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_name"
        android:layout_marginStart="22dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/phone"
        android:fontFamily="@font/comfortaa"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_phone"
        android:layout_marginStart="26dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="40dp"
        android:layout_toEndOf="@+id/id"
        android:fontFamily="@font/comfortaa"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <Button
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:background="@drawable/button_anim"
        android:text="@string/ok"
        android:textSize="14sp"
        android:fontFamily="@font/comfortaa"
        android:id="@+id/btn_dialog"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/text_dialog"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff" />

</RelativeLayout>