<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="153dp"
        android:layout_height="46dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/username2"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/vector_shap"
        android:layout_width="335dp"
        android:layout_height="215dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/vector_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vector_shap2"
        android:layout_width="401dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/vector_shape"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="550dp"
        android:fontFamily="@font/comfortaa"
        android:gravity="center_vertical"
        android:text="@string/login"
        android:textAppearance="@style/welcome_to"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/username2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="16dp"
        android:padding="20dp"
        android:autofillHints="username"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="Password"
        android:background="@drawable/text_border"
        android:padding="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="204dp"
        android:background="@drawable/button_anim"
        android:fontFamily="@font/comfortaa"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>